--- a/art/index.html
+++ b/art/index.html
@@ -99,6 +99,17 @@ note: i cannot draw, so most all i do is digital
                 </div>
 
 
+                <div id="ccontent">
+                    <img class="auditorium" src="../images/art/love/9.jpg" style="width: 160px;"/>
+                    <br><br><h3>Art I LOVE</h3>            <ol class="playlist_info">
+                        <li>just tons of other ppls' art that i love<</li><br>
+                    </ol>
+                    <a href="/art/love" class="label3">CLICK TO SEE BEAUTY</a>
+
+
+                </div>
+
+
 
 
 
