--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -40,7 +40,7 @@
                 <li>not to be used, just what im workin on to try and get better, apparently all i do is fake albulm covers??? i never noticed that</li><br>
               <img src="../../images/art/graphic/d2.png"style="width: 253px;"/>
               <img src="../../images/art/graphic/d3.png"style="width: 253px;"/>
-              <li>also the one on the right was made entirely of photos i took from my desk, and it bit of magic~</li><br>
+              <li>also the one on the right was made entirely of photos i took from my desk, and a bit of magic~</li><br>
   </ol>
   
           </div>
@@ -111,6 +111,21 @@
           </div>
 
 
+
+
+
+
+
+          
+          <div id="ccontent">
+            <img src="../../images/art/graphic/old/1.jpg"style="width: 210px;"/>
+            <img src="../../images/art/graphic/old/2.jpg"style="width: 210px;"/>
+            <img src="../../images/art/graphic/old/3.jpg"style="width: 210px;"/>
+            <br><br><h3>Some of the first graphic work i did</h3>            <ol class="playlist_info">
+              <li>like this is actually very old, there is older stuff but most of that is lost</li><br>
+</ol>
+
+        </div>
 
 
 
