--- a/art/love/index.html
+++ b/art/love/index.html
@@ -40,8 +40,8 @@
                   theres no good way to do this, with so many different resolutions itll look weird sry, its worth it for this pretty art
                   </p><br>
               <img src="../../images/art/love/1.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/3.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/5.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/3.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/5.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/2.jpg"style="width: 204px;"/>
               <img src="../../images/art/love/7.jpg"style="width: 204px;"/>
               <img src="../../images/art/love/8.jpg"style="width: 204px;"/>
