--- a/art/love/index.html
+++ b/art/love/index.html
@@ -42,60 +42,60 @@
               <img src="../../images/art/love/1.jpg"style="width: 204px;"/>
               <img src="../../images/art/love/3.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/5.JPG"style="width: 204px;"/>
-              <img src="../../images/art/love/2.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/7.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/8.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/4.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/6.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/2.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/7.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/8.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/4.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/6.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/9.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/10.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/10.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/11.png"style="width: 204px;"/>
               <img src="../../images/art/love/12.jpeg"style="width: 204px;"/>
-              <img src="../../images/art/love/13.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/14.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/15.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/16.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/17.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/18.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/19.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/20.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/21.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/22.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/23.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/24.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/25.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/26.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/27.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/28.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/29.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/30.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/31.png"style="width: 204px;"/>
-              <img src="../../images/art/love/32.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/33.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/34.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/35.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/36.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/37.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/13.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/14.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/15.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/16.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/17.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/18.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/19.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/20.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/21.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/22.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/23.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/24.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/25.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/26.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/27.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/28.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/29.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/30.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/31.PNG"style="width: 204px;"/>
+              <img src="../../images/art/love/32.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/33.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/34.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/35.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/36.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/37.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/38.jpeg"style="width: 204px;"/>
-              <img src="../../images/art/love/39.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/40.png"style="width: 204px;"/>
-              <img src="../../images/art/love/41.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/42.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/39.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/40.PNG"style="width: 204px;"/>
+              <img src="../../images/art/love/41.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/42.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/43.jpeg"style="width: 204px;"/>
-              <img src="../../images/art/love/44.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/45.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/44.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/45.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/46.png"style="width: 204px;"/>
-              <img src="../../images/art/love/47.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/47.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/57.jpeg"style="width: 204px;"/>
-              <img src="../../images/art/love/49.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/49.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/50.png"style="width: 204px;"/>
               <img src="../../images/art/love/51.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/52.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/53.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/52.JPG"style="width: 204px;"/>
+              <img src="../../images/art/love/53.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/54.jpg"style="width: 204px;"/>
-              <img src="../../images/art/love/55.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/55.JPG"style="width: 204px;"/>
               <img src="../../images/art/love/56.jpeg"style="width: 204px;"/>
-              <img src="../../images/art/love/48.jpg"style="width: 204px;"/>
+              <img src="../../images/art/love/48.JPG"style="width: 204px;"/>
   </ol>
   
           </div>
