--- a/art/index.html
+++ b/art/index.html
@@ -91,7 +91,7 @@ note: i cannot draw, so most all i do is digital
                 <div id="ccontent">
                     <img class="auditorium" src="../images/art/pxl/0.jpg" style="width: 160px;"/>
                     <br><br><h3>Pixel Art</h3>            <ol class="playlist_info">
-                        <li>I wish I still had the mc/trra textures i made as a child, all we got is the trash stuff i did post-██████<</li><br>
+                        <li>Not much to see here, just the bad stuff i did post-██████<</li><br>
                     </ol>
                     <a href="/art/pxl" class="label3">CLICK TO SEE MY ATTEMPTS</a>
 
