--- a/art/pxl/index.html
+++ b/art/pxl/index.html
@@ -22,7 +22,7 @@
 
         <div id="content">
             <p>
-						here's a few pixel art piece i've done, nothing to note of really but it has to be here
+						here's a few pixel art piece i've done, nothing to note of really but it has to be here, i used to do textures for minecraft and terraria but those are lost to the wind now
             </p>
         </div>
 				<div id="content2">
