--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -22,7 +22,7 @@
 
         <div id="content">
             <p>
-						here's different graphic design projects ive done ~ a VASTLY incomplete list
+						here's different graphic design projects ive done ~ a VASTLY incomplete list<br>also please forgive my for the long loading time on this page, all images are loaded in their original resolutions
             </p>
         </div>
 				<div id="content2">
