--- a/projects/index.html
+++ b/projects/index.html
@@ -75,7 +75,7 @@
             </ol>
 
             <div class="label">
-                <p><a href="/projects/uc">Read Soon</a></p>
+                <p><a href="https://relivesight.com/ucc">Read Soon</a></p>
             </div>
         </div>
 
