--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -118,9 +118,9 @@
 
           
           <div id="ccontent">
-            <img src="../../images/art/graphic/old/1.jpg"style="width: 210px;"/>
-            <img src="../../images/art/graphic/old/2.jpg"style="width: 210px;"/>
-            <img src="../../images/art/graphic/old/3.jpg"style="width: 210px;"/>
+            <img src="../../images/art/graphic/old/1.JPG"style="width: 210px;"/>
+            <img src="../../images/art/graphic/old/2.JPG"style="width: 210px;"/>
+            <img src="../../images/art/graphic/old/3.JPG"style="width: 210px;"/>
             <br><br><h3>Some of the first graphic work i did</h3>            <ol class="playlist_info">
               <li>like this is actually very old, there is older stuff but most of that is lost</li><br>
 </ol>
