--- a/projects/keeblade/index.html
+++ b/projects/keeblade/index.html
@@ -24,6 +24,7 @@
                 <br><h2>Keeblade</h2><br><br>
                 <br><h1>Pic</h1><br>
                 <br><p><img src="../../images/projects/keeblade/1.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/keeblade/a.jpeg" width="600px"></p><br>
         </div>
       </div>
     </div>
