--- a/projects/navi10/index.html
+++ b/projects/navi10/index.html
@@ -27,6 +27,7 @@
                 <br><p><img src="../../images/projects/navi10/2.jpeg" width="600px"></p><br>
                 <br><p><img src="../../images/projects/navi10/3.jpeg" width="600px"></p><br>
                 <br><p><img src="../../images/projects/navi10/4.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/navi10/a.jpeg" width="600px"></p><br>
         </div>
       </div>
     </div>
