--- a/projects/ut472/index.html
+++ b/projects/ut472/index.html
@@ -25,6 +25,7 @@
                 <br><h1>Pics</h1><br>
                 <br><p><img src="../../images/projects/ut472/3.jpeg" width="600px"></p><br>
                 <br><p><img src="../../images/projects/ut472/2.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/ut472/a.jpeg" width="600px"></p><br>
         </div>
       </div>
     </div>
