--- a/projects/tarnish4t/index.html
+++ b/projects/tarnish4t/index.html
@@ -21,10 +21,10 @@
       <div id="content">
 
         <div class="main">
-                <br><h2>Keeblade</h2><br><br>
+                <br><h2>Tarnish 4t</h2><br><br>
                 <br><h1>Pics</h1><br>
-                <br><p><img src="../../images/projects/keeblade/1.jpeg" width="600px"></p><br>
-                <br><p><img src="../../images/projects/keeblade/a.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/tarnish4t/1.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/tarnish4t/2.jpeg" width="600px"></p><br>
         </div>
       </div>
     </div>
