--- a/projects/tofuhhkb/index.html
+++ b/projects/tofuhhkb/index.html
@@ -21,10 +21,11 @@
       <div id="content">
 
         <div class="main">
-                <br><h2>Keeblade</h2><br><br>
+                <br><h2>Tofu HHKB</h2><br><br>
                 <br><h1>Pics</h1><br>
-                <br><p><img src="../../images/projects/keeblade/1.jpeg" width="600px"></p><br>
-                <br><p><img src="../../images/projects/keeblade/a.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/tofuhhkb/1.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/tofuhhkb/2.jpeg" width="600px"></p><br>
+                <br><p><img src="../../images/projects/tofuhhkb/3.jpeg" width="600px"></p><br>
         </div>
       </div>
     </div>
