--- a/projects/index.html
+++ b/projects/index.html
@@ -61,7 +61,24 @@
 
 
 
-
+	<div id="content">
+		<img class="auditorium" src="../images/projects/quarandream/1.png" style="width: 250px;"/>
+		<h3 style="float: right; right: 4px;">Quarandream</h3>
+		<p>2 days</p>
+		<ol class="playlist_info">
+			<li class="rr">
+				Quarantine gave me some more free time, i put my skills to the test to make my best custom yet~
+				i love it!!!~
+				
+			</li>
+			<li class='rr'>Status: [Completed]</li>
+			
+		</ol>
+	
+		<div class="label">
+			<p><a href="/projects/quarandream">Look More</a></p>
+		</div>
+	</div>
 
 
 
