--- a/projects/index.html
+++ b/projects/index.html
@@ -76,7 +76,7 @@
 		</ol>
 	
 		<div class="label">
-			<p><a href="/projects/quarandream">Look More</a></p>
+			<p><a href="/projects/quarandream">Read More</a></p>
 		</div>
 	</div>
 
