--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
     <a href="/randomlove" class="navi"><img src="images/nav/flow.png">random love</a>
+    <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>studylogs</strike></a>
     <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>ani-me</strike></a>
     <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>code</strike></a>
-    <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>video-games</strike></a>
+    <a href="/videogames" class="navi"><img src="images/nav/flow.png">video-games</a>
 
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
@@ -45,7 +46,7 @@
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-  	<a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>prod</strike></a>
+  	
     <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
