do to popular demand, ficed a link

--- a/projects/deskless/index.html
+++ b/projects/deskless/index.html
@@ -28,7 +28,7 @@
                 <p>reddit, where all good inspiration starts (besides p*nterest but we don't talk about that.)
                 i saw a post by u/HardAsMagnets, and immediately i knew i needed one.
                 i will not be documenting my personal process, instead check out Martin Körner's guide, which i followed to a T:</p>
-                <p><a href="" target="_blank">> Martin Körners Guide <</a></p>
+                <p><a href="https://stenoblog.com/georgi-stand-with-trackball/" target="_blank">> Martin Körners Guide <</a></p>
                 <br><h1>Pics</h1><br>
                 <br><p><img src="../../images/projects/deskless/2.jpg" width="400px"></p><br>
                 <br><p><img src="../../images/projects/deskless/1.jpg" width="400px"></p><br>
