--- a/videogames/index.html
+++ b/videogames/index.html
@@ -55,7 +55,7 @@
 						<br><br><h3>Games List</h3>            <ol class="playlist_info">
 							<li>all the games i own/play <</li><br>
             </ol>
-						<a href="../ucc" class="label3">CLICK TO SEE MY GAMES</a>
+						<a href="/gameslist" class="label3">CLICK TO SEE MY GAMES</a>
 
 
         </div>
