--- a/mobile/index.html
+++ b/mobile/index.html
@@ -26,7 +26,7 @@
         <a href="/blog" class="navi"><img src="../images/nav/flow.png">blog</a>
         <a href="/bio" class="navi"><img src="../images/nav/flow.png">bio</a>
         <a href="/chat" class="navi"><img src="../images/nav/flow.png">chat</a>
-            <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
+            <a href="/reference" class="navi"><img src="../images/nav/flow.png">reference</a>
     
       <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
         <a href="/projects" class="navi"><img src="../images/nav/flow.png">projects</a>
@@ -64,7 +64,7 @@
       <img class="logo" style="width:300px;" src="../images/home/tumble.png" />
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />
       <div class="row imgPixel">
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">4/11/20 </h3>
           <p style="margin-bottom:30px;">get ready, wake your psyche up!</p>
@@ -72,14 +72,14 @@
 
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/29/20 </h3>
           <p style="margin-bottom:30px;">NieR Replicant!! <br>NieR Reincarnation!!</p>
         </div>
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/7/20 </h3>
           <p style="margin-bottom:30px;">today's sum ls 30</p>
