--- a/art/draws/index.html
+++ b/art/draws/index.html
@@ -48,6 +48,22 @@
 						</div>
 
 
+		<div id="ccontent">
+            <img src="../../images/art/draws/6.png"style="width: 664px;"/>
+						<br><br><h3>Newest Attempt</h3>            <ol class="playlist_info">
+							<li>im actually kinda proud of this one, at least when its used as a pfp</li><br>
+                            <br>
+                        </ol>
+                        
+                                </div>
+
+                                
+
+
+
+
+
+
 
 		<div id="ccontent">
             <img src="../../images/art/draws/3.0.png"style="width: 664px;"/>
