--- a/art/pxl/index.html
+++ b/art/pxl/index.html
@@ -7,7 +7,15 @@
     <link href="core.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
 
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123647555-2');
+</script>
 </head>
 
 <body>
