--- a/mobile/index.html
+++ b/mobile/index.html
@@ -16,7 +16,15 @@
 <!-- InstanceEndEditable -->
 </head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-123647555-2');
+</script>
 <body>
 
   <div class="row rowRowFightThePower">
