--- a/projects/placeholder/index.html
+++ b/projects/placeholder/index.html
@@ -9,6 +9,15 @@
 <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
 <link rel="stylesheet" type="text/css" href="core.css">
 <link type="text/css" rel="stylesheet" media="screen and (max-width: 800px)" href="../stylesheetU800px.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123647555-2');
+</script>
 </head>
 
 <body>
