--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -30,6 +30,15 @@
         font-weight: bold;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123647555-2');
+</script>
   </head>
   <body>
   <div id="page">
