--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
     <a href="/randomlove" class="navi"><img src="images/nav/flow.png">random love</a>
     <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>studylogs</strike></a>
-    <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>ani-me</strike></a>
+    <a href="/anime" class="navi"><img src="images/nav/flow.png">ani-me</a>
     <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>code</strike></a>
     <a href="/videogames" class="navi"><img src="images/nav/flow.png">video-games</a>
 
