comment section test

--- a/randomlove/musicals/index.html
+++ b/randomlove/musicals/index.html
@@ -132,6 +132,23 @@
 
 										        </div>
 
+
+
+
+		<div id="ccontent">
+	<img class="auditorium" src="../../images/randomlove/musicals/rs.jpg" style="width: 160px;"/>
+				<br><br><h3>Razia's Shadow</h3>            <ol class="playlist_info">
+					<li>Producer: Forgive Durden</li>
+					<li>Release: 2008</li>
+					<li>Rating: Ultra Yummy</li><br>
+	</ol>
+
+
+
+</div>
+												
+
+
 														<div id="ccontent">
 																		<img class="auditorium" src="../../images/randomlove/musicals/rc.jpg" style="width: 160px;"/>
 																		<br><br><h3>Carrie</h3>            <ol class="playlist_info">
