--- a/404.html
+++ b/404.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+    <title>「ｒｅ：Ｌｉｖｅ」</title>
+
+    <link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
 <script>
