--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
   	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
-		  	<a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
+        <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
+        <a href="/guetsbook" class="navi"><img src="images/nav/flow.png">guest-book</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
