--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
         <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
-        <a href="/guetsbook" class="navi"><img src="images/nav/flow.png">guest-book</a>
+        <a href="/guestbook" class="navi"><img src="images/nav/flow.png">guest-book</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
