--- a/mobile/index.html
+++ b/mobile/index.html
@@ -68,7 +68,7 @@
 	<div class="col-sm-12">
       <h1>『Re Sight』</h1>
       <p>no matter where you go, everyone's connected. welcome to my connection</p>
-      <p>this mobile site is a vastly simplified version of the desktop, hopefully it functions enough. please check out the desktop! </p>
+      <p>this mobile site is a vastly simplified version of the desktop, hopefully it functions enough. thanks for visiting!~</p>
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
