--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
+<p>feel free to leave a note in the guest-book while you're here!</p>
+
+<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">4/22/20 </h3>
+          <p style="margin-bottom:30px;">The sun is my worst enemy -.-</p>
+        </div>
+
+
 
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
