--- a/mobile/index.html
+++ b/mobile/index.html
@@ -68,7 +68,7 @@
 	<div class="col-sm-12">
       <h1>『Re Sight』</h1>
 
-      <p>this mobile site is a vastly simplified version of the desktop, hopefully it functions enough. thanks for visiting!</p>
+      <p>this mobile site is a vastly simplified version of the desktop, hopefully it functions enough. thanks for visiting! feel free to leave a note in the guest book while you're here!</p>
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
@@ -76,6 +76,14 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
        
+
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">4/22/20 </h3>
+          <p style="margin-bottom:30px;">The sun is my worst enemy -.-</p>
+        </div>
+
+
+
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">4/11/20 </h3>
           <p style="margin-bottom:30px;">get ready, wake your psyche up!</p>
