--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -299,7 +299,7 @@
 								<li>Origin: NieR: Automata</li>
 								<li>Gender: Male/Android</li>
 								<li>Rating: S</li>
-								<li>Notes: One of the few one this list that I cosplay, A QUALITY SOFT BOY UWU</li><br>
+								<li>Notes: One of the few on this list that I cosplay, A QUALITY SOFT BOY UWU</li><br>
 							</ol>
 			</div>
 
