--- a/projects/index.html
+++ b/projects/index.html
@@ -68,7 +68,24 @@
 
 
 
-
+			<div id="content">
+				<img class="auditorium" src="../images/projects/elytra/1.png" style="width: 250px;"/>
+				<h3 style="float: right; right: 4px;">Elytra</h3>
+				<p>2 days</p>
+				<ol class="playlist_info">
+					<li class="rr">
+						Second full 3d printed handwire... i didn't have the right screws, so i gave it ugly caps, i consider this one a failure, but i cant learn without mistakes!
+						
+					</li>
+					<li class='rr'>Status: [Completed]</li>
+					
+				</ol>
+			
+				<div class="label">
+					<p><a href="/projects/elytra">Read More</a></p>
+				</div>
+			</div>
+		
 
 	<div id="content">
 		<img class="auditorium" src="../images/projects/quarandream/1.png" style="width: 250px;"/>
