--- a/projects/elytra/index.html
+++ b/projects/elytra/index.html
@@ -33,7 +33,7 @@
 
 
                 <br><h2>The Elytra</h2><br><br>
-                <img src="../../images/projects/elytra/1.jpeg" width="600px"><br><br>
+                <img src="../../images/projects/elytra/e.png" width="600px"><br><br>
                
                 <br><div id="content2">
                   <div class="label2">
