--- a/daily/index.html
+++ b/daily/index.html
@@ -70,7 +70,7 @@
                 </p><br>
                 <h3>Games</h3><p> i only had time to play a little burnout revenge, i need to get back to playing nier smhhhh
                 </p><br>
-                <h3>Anime</h3><p> rascal does not dream of bunny girl senpai! all done! ;;;; i cri, oh and that reminds me i need to both add best girl mai to my fav characters list and give the show a ranking, hmm thatll be hard
+                <h3>Anime</h3><p> rascal does not dream of bunny girl senpai! all done! watched with aleexxx ;;;; i cri, oh and that reminds me i need to both add best girl mai to my fav characters list and give the show a ranking, hmm thatll be hard
                   its cheating by being so emotional smh. also ill probably watch the movie tonight woo! exciting
                 </p><br>
                 <h3>Art</h3><p>i intend on uploading pretty art i see into my blog but for the moment its too much of a drag, ahhh</p>
