--- a/projects/elytra/index.html
+++ b/projects/elytra/index.html
@@ -49,7 +49,7 @@
               at least they are finally out of their bags!</p><br>
 
 
-              <p>also due to suprisingly popular demand i took a stab at a handwiring guide, using this project as the tutorial, so thats where most of this log is: <a href="reference/handwire">linked here</a></p>
+              <p>also due to suprisingly popular demand i took a stab at a handwiring guide, using this project as the tutorial, so thats where most of this log is: <a href="../../reference/handwire">linked here</a></p>
           
         </div>
       </div>
