--- a/anime/list/index.html
+++ b/anime/list/index.html
@@ -263,7 +263,8 @@
          <tr><td>Hisone to Maso-tan </td><td>Watching</td><td>2</td><td>Tv</td><td>~</td></tr>
          <tr><td>Karakai Jouzu no Takagi-san </td><td>Watching</td><td>2</td><td>Tv</td><td>~</td></tr>
          <tr><td>Koukaku Kidoutai: Stand Alone Complex </td><td>Watching</td><td>1</td><td>Tv</td><td>~</td></tr>
-         <tr><td>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai </td><td>Watching</td><td>6</td><td>Tv</td><td>~</td></tr>
+         <tr><td>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai </td><td>Completed</td><td>12</td><td>Tv</td><td>7.3</td></tr>
+         <tr><td>Rascal Does Not Dream of Dreaming Girl</td><td>Completed</td><td>1</td><td>Movie</td><td>7.3</td></tr>
         </tbody></table>
 
 
