--- a/daily/index.html
+++ b/daily/index.html
@@ -37,7 +37,7 @@
 
 
       <div id="content">
-        <div class="main">
+        <div class="main2" id="ddd">
                 <h2>Daily Logs</h2><br><div id="content2">
                   <div class="label2">
                       <p><a href="https://relivesight.com/">Return to Home Page</a></p>
