--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -291,8 +291,6 @@
 
 
 
-
-
 			<div id="ccontent">
 							<img class="auditorium" src="../../images/randomlove/characters/9s.jpg" style="width: 160px;"/>
 							<br><br><h3>9s </h3>            <ol class="playlist_info">
@@ -326,11 +324,38 @@
 							<br><br><h3>Mob </h3>            <ol class="playlist_info">
 								<li>Origin: Mob Psycho 100</li>
 								<li>Gender: Male</li>
-								<li>Rating: B</li>
-								<li>Notes: GET READY WAKE YOUR PSYCHE UP MOB</li><br>
+								<li>Rating: B+</li>
+								<li>Notes: GET READY WAKE YOUR PSYCHE UP</li><br>
 							</ol>
 			</div>
+			<div id="ccontent">
+				<img class="auditorium" src="../../images/randomlove/characters/mai.jpg" style="width: 160px;"/>
+				<br><br><h3>Mai Sakurajima </h3>            <ol class="playlist_info">
+					<li>Origin: Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</li>
+					<li>Gender: Female</li>
+					<li>Rating: S</li>
+					<li>Notes: this show isn't allowed to be this sad</li><br>
+				</ol>
+</div>
+<div id="ccontent">
+	<img class="auditorium" src="../../images/randomlove/characters/dbv.jpg" style="width: 160px;"/>
+	<br><br><h3>Dancer of the Boreal Valley </h3>            <ol class="playlist_info">
+		<li>Origin: Dark Souls 3</li>
+		<li>Gender: Female</li>
+		<li>Rating: A+</li>
+		<li>Notes: such a fun fight</li><br>
+	</ol>
+</div>
 
+	<div id="ccontent">
+				<img class="auditorium" src="../../images/randomlove/characters/oz.jpg" style="width: 160px;"/>
+				<br><br><h3>Ozen "The Immovable" </h3>            <ol class="playlist_info">
+					<li>Origin: Made in Abyss</li>
+					<li>Gender: Female</li>
+					<li>Rating: B</li>
+					<li>Notes: so coooooool. so strong!</li><br>
+				</ol>
+</div>
 
 
 							<div id="ccontent">
