--- a/mobile/index.html
+++ b/mobile/index.html
@@ -44,7 +44,7 @@
         <a href="/randomlove" class="navi"><img src="../images/nav/flow.png">random love</a>
         <a href="/ucc" class="navi"><img src="../images/nav/flow.png"><strike>studylogs</strike></a>
         <a href="/anime" class="navi"><img src="../images/nav/flow.png">ani-me</a>
-        <a href="/ucc" class="navi"><img src="../images/nav/flow.png"><strike>code</strike></a>
+        <a href="/code" class="navi"><img src="../images/nav/flow.png">code</a>
         <a href="/videogames" class="navi"><img src="../images/nav/flow.png">video-games</a>
     
     
