--- a/mobile/index.html
+++ b/mobile/index.html
@@ -42,7 +42,7 @@
       <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
         <a href="/projects" class="navi"><img src="../images/nav/flow.png">projects</a>
         <a href="/randomlove" class="navi"><img src="../images/nav/flow.png">random love</a>
-        <a href="/ucc" class="navi"><img src="../images/nav/flow.png"><strike>studylogs</strike></a>
+        <a href="/studylogs" class="navi"><img src="../images/nav/flow.png">studylogs</a>
         <a href="/anime" class="navi"><img src="../images/nav/flow.png">ani-me</a>
         <a href="/code" class="navi"><img src="../images/nav/flow.png">code</a>
         <a href="/videogames" class="navi"><img src="../images/nav/flow.png">video-games</a>
