--- a/studylogs/index.html
+++ b/studylogs/index.html
@@ -41,12 +41,12 @@
     <div id="wrap">
 
         <div id="content_head">
-            <h1>Code</h1>
+            <h1>Study Logs</h1>
         </div>
 
 
         <div id="content">
-            <p>the code projects i've done go here, but probably only the ones im proud of so just this website's github repo lol
+            <p>this is like project logs but things i just learn, not things im making, for now there is nothing here but i needed to get this page up n running
             </p>
             
         </div>
@@ -60,11 +60,11 @@
 
 
 <div id="ccontent">
-            <img class="auditorium" src="../images/home/pupilpng.png" style="width: 160px;"/>
-						<br><br><h3>My Website</h3>            <ol class="playlist_info">
-							<li>relivesight.com <</li><br>
+            <img class="auditorium" src="../images/society/dd.gif" style="width: 160px;"/>
+						<br><br><h3>Coming Soon</h3>            <ol class="playlist_info">
+							<li>coming soon <</li><br>
             </ol>
-						<a href="https://github.com/Omnisairen/relivesight"  target="_blank" class="label3">CLICK TO SEE MY CODE</a>
+						<a href="../ucc"  target="_blank" class="label3">CLICK TO SEE MY LEARN</a>
 
 
         </div>
