--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,22 @@
 						</div>
 
 
-
+	<div id="content">
+				<img class="auditorium" src="../images/projects/dactylknight/1.png" style="width: 250px;"/>
+				<h3 style="float: right; right: 4px;">Dactyl Knight</h3>
+				<p>2 days</p>
+				<ol class="playlist_info">
+					<li class="rr">
+						featuring figurines! this is my first attempt painting, and i used some caps from a cashier cherry keeb, but i thought everything worked out well~
+					</li>
+					<li class='rr'>Status: [Completed]</li>
+					
+				</ol>
+			
+				<div class="label">
+					<p><a href="/projects/dactylknight">Read More</a></p>
+				</div>
+			</div>
 
 
 			<div id="content">
