--- a/projects/dactylknight/index.html
+++ b/projects/dactylknight/index.html
@@ -59,7 +59,7 @@
                 <p>> key switches (cherry black) <</p>
                 <p>> lube (krytox g502)<</p>
                 <p>> printer filament (blue) <</p>
-                <p> > cherry cashier keycaps < </p>
+                <p> > cherry rc128bm keycaps < </p>
                 <p> > solder < </p>
                 <p> > wire < </p>
                 <p> > diodes < </p>
