--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,30 @@
 						</div>
 
 
+
+
+							<div id="content">
+				<img class="auditorium" src="../images/projects/9s/1.png" style="width: 250px;"/>
+				<h3 style="float: right; right: 4px;">9S (Nines)</h3>
+				<p>2 days</p>
+				<ol class="playlist_info">
+					<li class="rr">
+					YorHa No. 9 Type S is amazing and i wasnt able to capture that but it was my first test doing full painting with brushes, it
+					was an attempt!
+					</li>
+					<li class='rr'>Status: [Completed]</li>
+					
+				</ol>
+			
+				<div class="label">
+					<p><a href="/projects/0s">Read More</a></p>
+				</div>
+			</div>
+
+
+
+
+
 	<div id="content">
 				<img class="auditorium" src="../images/projects/dactylknight/1.png" style="width: 250px;"/>
 				<h3 style="float: right; right: 4px;">Dactyl Knight</h3>
