--- a/projects/index.html
+++ b/projects/index.html
@@ -70,7 +70,7 @@
 							<div id="content">
 				<img class="auditorium" src="../images/projects/9s/1.png" style="width: 250px;"/>
 				<h3 style="float: right; right: 4px;">9S (Nines)</h3>
-				<p>2 days</p>
+				<p>1 day</p>
 				<ol class="playlist_info">
 					<li class="rr">
 					YorHa No. 9 Type S is amazing and i wasnt able to capture that but it was my first test doing full painting with brushes, it
@@ -110,7 +110,7 @@
 			<div id="content">
 				<img class="auditorium" src="../images/projects/elytra/1.png" style="width: 250px;"/>
 				<h3 style="float: right; right: 4px;">Elytra</h3>
-				<p>2 days</p>
+				<p>1 day</p>
 				<ol class="playlist_info">
 					<li class="rr">
 						Second full 3d printed handwire... i didn't have the right screws, so i gave it ugly caps, i consider this one a failure, but i cant learn without mistakes!
