--- a/daily/index.html
+++ b/daily/index.html
@@ -79,7 +79,7 @@
 
                 <h3>Video</h3><p>ill add the video page soon but i edited an mv a long time ago and didnt finish it but here are some pics from it cuz i finally rendered it, it used clips from half alive and the song (a kiss - the driver era) so yes yes i will write log soon</p>
                 <br><p><img src="../images/daily/42520/3.png" width="405px"><img src="../images/daily/42520/4.png" width="405px"><img src="../images/daily/42520/5.png" width="405px"><img src="../images/daily/42520/7.png" width="405px"><img src="../images/daily/42520/6.png" width="405px"><img src="../images/daily/42520/9.png" width="405px"> </p>
-
+                <br><h3>Personal</h3><p>so woooo finally added pictures and links in a daily log, also my after effects crashed while trying to render, and i opened my window today</p>
                 <br><h3>Fact of the day</h3><p>bread is good
                 </p>
        
