--- a/daily/index.html
+++ b/daily/index.html
@@ -70,7 +70,7 @@
                 <p><img src="../images/daily/42520/3.jpeg" width="250px"><img src="../images/daily/42520/2.jpeg" width="495px"></p><br>
                 
                 <h3>Games</h3><p> so ive been trying to play super mario galacy two while i eat food, but that gets quite troublesome, until i started holding the controller with one hand,
-                  it totally worked out suprisingly, here is my grip: (yeah i know it looks like its hard to press A but its not)
+                  it totally worked out, here is my grip: (yeah i know it looks like its hard to press A but its not, its suprisingly comfy)
                 </p><br><p><img src="../images/daily/42520/1.jpeg" width="310px"></p>
                 
                 <h3>Code</h3><p> trying to train an ai, ill write a study log soon but these are the three best answers it had: </p><br><p><img src="../images/daily/42520/2.png" width="310px"></p>
