--- a/daily/index.html
+++ b/daily/index.html
@@ -66,7 +66,7 @@
                 <h3>3d Prints</h3><p> project log for 9s figurine <a href="https://relivesight.com/projects/9s/"> > found here < </a>its all done! 2b is coming next
                 </p><br>
             
-                 <h3>Personal</h3><p>decided to make my ugly looking keyboard shelf into a shelf for computers (still bad looking but functional)</p><br>
+                 <h3>Personal</h3><p>decided to make my ugly looking keyboard shelf into a shelf for some of the computers i had lying around (still bad looking but functional)</p><br>
                 <p><img src="../images/daily/42520/3.jpeg" width="250px"><img src="../images/daily/42520/2.jpeg" width="495px"></p><br>
                 
                 <h3>Games</h3><p> so ive been trying to play super mario galacy two while i eat food, but that gets quite troublesome, until i started holding the controller with one hand,
