--- a/daily/index.html
+++ b/daily/index.html
@@ -75,7 +75,7 @@
                 
                 <h3>Code</h3><p> trying to train an ai, ill write a study log soon but these are the three best answers it had: </p><br><p><img src="../images/daily/42520/2.png" width="310px"></p>
 
-                <h3>Reddit</h3><p> u/ijauradunbi put my builds as examples on his website for the dactyl generator <a href="http://dactyl.siskam.link/example" target="_blank"> > found here < </a>so nice of him!</p><br><p><img src="../images/daily/42520/1.png" width="410px"> </p>
+                <h3>Reddit</h3><p> u/ijauradunbi put my builds as examples on their website for the dactyl generator <a href="http://dactyl.siskam.link/example" target="_blank"> > found here < </a>so nice of him!</p><br><p><img src="../images/daily/42520/1.png" width="410px"> </p>
 
                 <h3>Video</h3><p>ill add the video page soon but i edited an mv a long time ago and didnt finish it but here are some pics from it cuz i finally rendered it, it used clips from half alive and the song (a kiss - the driver era) so yes yes i will write log soon</p>
                 <br><p><img src="../images/daily/42520/3.png" width="405px"><img src="../images/daily/42520/4.png" width="405px"><img src="../images/daily/42520/5.png" width="405px"><img src="../images/daily/42520/7.png" width="405px"><img src="../images/daily/42520/6.png" width="405px"><img src="../images/daily/42520/9.png" width="405px"> </p>
