--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
-    <a href="/ucc" class="navi"><img src="images/nav/flow.png"><strike>video</strike></a>
+    <a href="/video" class="navi"><img src="images/nav/flow.png">video</a>
     <a href="/art" class="navi"><img src="images/nav/flow.png">art</a>
+   
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-  	
+    <a href="/ucc" class="navi"><img src="images/nav/flow.png">coming-soon</a>
     <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
@@ -77,6 +78,17 @@
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
 <p>feel free to leave a note in the guest-book while you're here!</p>
+
+
+
+
+<div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+<div class="col-sm-9 col-md-offset-1">
+  <h3 style="margin-bottom:10px;">4/28/20 </h3>
+  <p style="margin-bottom:30px;">all pages accessable!</p>
+</div>
+
+
 
 <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
