--- a/video/mv/index.html
+++ b/video/mv/index.html
@@ -36,7 +36,7 @@
                 
                 <br><div id="content2">
                   <div class="label2">
-                      <p><a href="https://relivesight.com/projects">Return Back A Page</a></p>
+                      <p><a href="https://relivesight.com/video">Return Back A Page</a></p>
                   </div>
               </div><br><br>
               <h1>Info</h1><br>
