--- a/daily/index.html
+++ b/daily/index.html
@@ -92,7 +92,7 @@
       <h3>Music</h3><p>i listened to lots of different stuff today, oh oh oh!!! i found out there were two songs in hamilton ost that i hadnt heard cuz i only listen to the obc and not a bootleg.
         they are soooo sad and emotional and aaaaaaaaaaaaaaaaaaaaaaa. here are some animatics of them:
         <a href="https://www.youtube.com/watch?v=tDio2AGtL7w" target="_blank">Laurens Interlude</a> and <a href="https://www.youtube.com/watch?v=lQh-7-PNgoU" target="_blank">Congratulations</a>
-       why does a historical musical promote so many tears. ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; "i have so much work to do" aah hamilton is such an inspirtation.
+       why does a historical musical produce so many tears. ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; "i have so much work to do" aah hamilton is such an inspirtation.
       also also i might as well quick mention everything i listened to today: artist names: nf, the royal they, bear ghost, jack conte, alicebanD, haru nemuri, hatsune miku, neru, forgive durden, art sorority, shayfer james, i the mighty, lemon demon, rare americans, like 5 musicals, and MOB CHOIR.</p><br>
    
          
