--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -534,6 +534,10 @@
                <tr><td>World of Goo</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Worms Revolution</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Zombotron</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td></td></tr>
+               <tr><td>Alien Isolation</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Pathologic HD</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Pathologic 2</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Burnout Revenge</td><td>Y</td><td>Y</td><td>PS2</td><td>On going</td><td>N</td><td></td></tr>
               </tbody></table>
 
 
