--- a/videogames/index.html
+++ b/videogames/index.html
@@ -69,7 +69,18 @@
 
         </div>
 
+        <div id="ccontent">
+            <img class="auditorium" src="../images/videogames/hk/1.jpg" style="width: 160px;"/>
+						<br><br><h3>Hollow Knight</h3>            <ol class="playlist_info">
+							<li>my review of hollow knight <</li><br>
+            </ol>
+						<a href="/videogames/hollowknight" class="label3">CLICK TO SEE MY OPINION</a>
 
+
+        </div>
+
+
+ 
  
 
 
