--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,25 @@
 						</div>
 
 
+						<div id="content">
+							<img class="auditorium" src="../images/projects/smore/1.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">S'more</h3>
+							<p>1 day</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								had this pcb lying around for way too long, had enough parts to fully complete it,
+								decided to make it into something delicious! marshmellos
+								not included~
+								</li>
+								<li class='rr'>Status: [Completed]</li>
+								
+							</ol>
+						
+							<div class="label">
+								<p><a href="/projects/smore">Read More</a></p>
+							</div>
+						</div>
+
 
 
 						<div id="content">
