--- a/projects/smore/index.html
+++ b/projects/smore/index.html
@@ -63,7 +63,7 @@
  
 
                 <br><h1>Process</h1><br>
-                <p>got the pcb and soldered the micro, diodes, and oled on, then i screwed on the glass</p>
+                <p>got the pcb and soldered the micro, diodes, and oled on, then i screwed on the acrylic</p>
                 <br><p><img src="../../images/projects/smore/3.jpeg" width="400px"><img src="../../images/projects/smore/2.jpeg" width="400px"></p><br>
               
                 <p>then just soldered all of the switches into place and screwed the rest of the standoffs, and thats it!</p>
