--- a/projects/index.html
+++ b/projects/index.html
@@ -64,6 +64,23 @@
 								</div>
 						</div>
 
+						<div id="content">
+							<img class="auditorium" src="../images/projects/wiitea/1.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">WiiTea</h3>
+							<p>1 day</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								this project was pre-photobooth so i thought it best to keep the pictures i took back then, finally
+								logged it, original name was Cutii (Like cute plus wii) but sadly cut is a word ;;
+								</li>
+								<li class='rr'>Status: [Completed]</li>
+								
+							</ol>
+						
+							<div class="label">
+								<p><a href="/projects/wiitea">Read More</a></p>
+							</div>
+						</div>
 
 						<div id="content">
 							<img class="auditorium" src="../images/projects/smore/1.png" style="width: 250px;"/>
